feat: add queries to the fetch layers function and swagger
